--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -291,4 +291,43 @@ main.call {
 .galery-index a {
   background-color: #0E41B0;
   color: #000;
+}
+
+body {
+  background-color: #09636B;
+}
+
+.presdestinos {
+  background-color: #000;
+  color: #0E41B0;
+  text-align: center;
+  font-size: 30px;
+  padding: 20px;
+}
+
+.PD {
+  font-family: "Madimi One", sans-serif;
+  background-color: #09636B;
+  text-align: center;
+  color: #000;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.PD a {
+  color: #0E41B0;
+  font-size: 20px;
+  background-color: #F05D0E;
+  text-decoration: none;
+}
+
+/* COMIENZA ESTILOS DE "Contanos" */
+.contanos h2 {
+  background-color: #0E41B0;
+  text-align: center;
+}
+
+.contanos p {
+  margin-left: 3%;
+  margin-right: 3%;
 }/*# sourceMappingURL=estilos.css.map */
