--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -321,6 +321,54 @@ body {
   text-decoration: none;
 }
 
+.h2exp {
+  background-color: #000;
+  color: #0E41B0;
+  text-align: center;
+  font-size: 30px;
+  padding: 20px;
+  margin-bottom: 0;
+}
+
+.experiencias {
+  background-image: url(../img/experiencias.main1.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 650px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.experiencia {
+  background-color: rgba(196, 196, 191, 0.356);
+  width: 60%;
+  border: 6px solid orange;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.experiencia h1 {
+  color: #0E41B0;
+  text-align: center;
+  text-shadow: 0 0 4px;
+  font-family: "Merriweather", serif;
+}
+
+.experiencia a {
+  background-color: #F05D0E;
+  color: #000;
+  padding: 10px 30px;
+  text-decoration: none;
+  border-radius: 15px;
+  margin: 20px;
+}
+
+.card {
+  background-color: #09636B;
+  text-align: center;
+}
+
 /* COMIENZA ESTILOS DE "Contanos" */
 .contanos h2 {
   background-color: #0E41B0;
@@ -330,4 +378,14 @@ body {
 .contanos p {
   margin-left: 3%;
   margin-right: 3%;
+}
+
+.card {
+  overflow: hidden;
+}
+
+.card-body {
+  font-family: "Merriweather", serif;
+  color: #0E41B0;
+  background-color: #000;
 }/*# sourceMappingURL=estilos.css.map */
