--- a/estilos/estilos.scss
+++ b/estilos/estilos.scss
@@ -18,6 +18,7 @@ $micolor1:#F05D0E;
 $micolor2:#09636B;
 $micolor3:#000;
 $micolor4:#0E41B0;
+$micolor5:#f8f8f8fd;
 
 .navbar{
     background-color: $micolor1;
@@ -42,19 +43,29 @@ $micolor4:#0E41B0;
     height: 380px;
     color: $micolor3;
     width: 100%;
+    text-align: center;
 }
-
+.ju{
+    background-color: rgba(92, 87, 87, 0.397);
+    width: 70%;
+    padding: 20px;
+    border: 3px solid #0e41b093;
+    text-align: center;
+    color:#FF4500;
+}
 main{
-    background-color: $micolor2;
+    background-image: linear-gradient(to right bottom, #053718, #00422d, #004e42, #005957, #09636b);
     width: 100%;
     height: auto;
     color: $micolor3;
 }
-.presentacion{
+#intro{
+    margin-top: 3%;
     color: $micolor1;
-    text-align: center;
-    margin-left: 5%;
-    margin-right: 5%;
+}
+#intro p{
+    font-size: 20px;
+    color: $micolor5;
 }
 
 .galery-index{
@@ -73,11 +84,19 @@ main{
 .pinter{
     color: $micolor1;
     text-align: center;
+    font-size: 22px;
     margin-left: 8%; 
     margin-right: 8%;
 }
 .sec {
-    width: auto;
+    overflow: hidden;
+    margin-left: 25%;
+    margin-bottom: 3%;
+    width: 50%;
+    height: 50%;
+    background-size: cover;
+    text-align: center   ;
+    background-position: center;
 }
 
 footer{
@@ -90,7 +109,7 @@ footer{
 footer p{
     margin-bottom: 20px;
 }
-.redes{
+footer a{
     color: $micolor2 ;
     text-decoration: none;
     font-size: 30px;
@@ -126,21 +145,21 @@ main.call{
     place-items: center;
 }
 .call{
-background-color: rgba(255, 255, 255, 0.082);
+background-color: rgba(92, 87, 87, 0.397);
 width: 70%;
 padding: 20px;
-border: 5px solid orange;
+border: 3px solid $micolor4;
 text-align: center;
 }
 .call1{
-background-color: $micolor2;
+
 }
 .call h1{
-color: $micolor4;
+color: $micolor1;
 text-shadow: 0 0 5px;
 }
 .call p{
-color: #EDDEA4;
+color: $micolor5;
 
 }
 .call1 h2{
@@ -151,10 +170,10 @@ color: #EDDEA4;
     padding: 20px;
 }
 .call1 p{
-    color: #000;
+    color: $micolor1;
     font-family:$mifuente2;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 2%;
+    margin-bottom: 2%;
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -180,7 +199,6 @@ color: #EDDEA4;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(8, 200px);
-    background-color: $micolor2;
     padding: 20px;
     grid-gap: 20px;
 }
@@ -190,7 +208,7 @@ color: #EDDEA4;
     background-repeat: no-repeat;
     background-position: center;
     transition: all 0.9s;
-    background-color: $micolor4;
+    background-color: #04BF8A;
 }
 .item:hover{
     transition: all 0.9s;
@@ -271,9 +289,6 @@ color: #EDDEA4;
         grid-template-rows: 200px 200px;
     }
 }
-.tarjet{
-    background-color: $micolor2;
-}
 .galery-index a{
     background-color: $micolor4;
     color: $micolor3;
@@ -283,26 +298,29 @@ color: #EDDEA4;
 body{
     background-color: $micolor2;
 }
+
 @mixin anclas1 {
     background-color: #000;
-    color: #0E41B0;
+    color: $micolor4;
     text-align: center;
     font-size: 30px;
     padding: 20px;
 }
+@mixin DH2{
+    color: $micolor1;
+}
 @mixin PD{
     font-family: $mifuente3;
-    background-color: $micolor2;
     text-align: center;
-    color: $micolor3;
-    margin-left: 3%;
-    margin-right: 3%;
+    color: $micolor5;
+    font-size: 20px;
 }
 @mixin AD{
     color: $micolor4;
     font-size: 20px;
     background-color: $micolor1;
     text-decoration: none;
+    margin-bottom: 5%;
 }
 @mixin img{
     padding: 300px
@@ -311,16 +329,28 @@ body{
     @include anclas1;
 }
 .PD{
-    @include PD;
+    @include PD
 }
-.PD a{
-    @include AD
+
+.destino-cordoba{
+    margin-top: 5%
+}
+.destino-cordoba h2{
+    @include DH2
+}
+button, .AD{
+    @include AD;
+    text-decoration: noneS;
+}
+.sanluis{
+    margin-top: 5%
 }
 //inicia estilos experiencias//
 .h2exp{
     @include anclas1;
-    margin-bottom: 0;
+    margin-bottom: 15px;
 }
+
 .experiencias{
     background-image: url(../img/experiencias.main1.jpg);
     background-size: cover;
@@ -354,24 +384,54 @@ body{
 .card{
     background-color: $micolor2;
     text-align: center;
+    color: #F05D0E;
 }
-
+section{
+    background-image: linear-gradient(to right bottom, #053718, #00422d, #004e42, #005957, #09636b);
+}
 
 /* COMIENZA ESTILOS DE "Contanos" */
-
-.contanos h2{
-    background-color: $micolor4;
+.contanos h3{
     text-align: center;
+    font-size: 25px;
+    color: $micolor1;
+    margin-bottom: 25px;
+}
+.PDC{
+    text-align: center;
+    color: $micolor1;
+    text-decoration: underline;
 }
 .contanos p{
+    color: $micolor5;
+    font-size: 20px;
+    text-align: center;
     margin-left: 3%;
     margin-right: 3%;
+}
+.formulario{
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+}
+.formulario button{
+    margin-top: 10px;
+    color: #000;
+    font-size: 20px;
+    background-color: $micolor1;
+    text-decoration: none;
+    margin-bottom: 5%;
+}
+.formulario .form-label{
+    color: $micolor1;
 }
 .card{
     overflow: hidden;
 }
 .card-body{
     font-family: $mifuente1;
-    color: $micolor4;
+    color: #04BF8A;
     background-color: $micolor3;
 }
+body{
+    background-image: linear-gradient(to right bottom, #053718, #00422d, #004e42, #005957, #09636b);}
